syntax = "proto3";

package user;
option go_package = "./user";

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
  map<string, string> ChatIdAndUserIds = 1 ;
}

message UserResponse {
  map<string, string> ChatIdAndUserNames = 1 ;
}